# KinectFilter

./: CMakeLists.txt  README.md  kernels.cl  kinectFilter.cpp
kernels/: kernels.cl
src/: kinectFilter_clc++.cpp  kinectFilter_clc.cpp  kinectFilter_gl_interop_texture.cpp  kinectFilter_gl_interop_vertex_buffer.cpp
